--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -4,7 +4,7 @@ container_commands:
     leader_only: true
 
   02_createsuperuser:
-    command: "source /var/app/venv/*/bin/activate && echo \"from accounts.models import Account; Account.objects.create_superuser('Raghav', 'Chugh', 'raghavchugh.code@gmai.com', 'raghavchugh.code', 'djangoproject')\" | python3 manage.py shell"
+    command: "source /var/app/venv/*/bin/activate && echo \"from accounts.models import Account; Account.objects.create_superuser('Raghav', 'Chugh', 'raghavchugh.code@gmail.com', 'raghavchugh.code', 'djangoproject')\" | python3 manage.py shell"
     leader_only: true
 
 option_settings:
