--- a/.ebextensions/db-migrate.config
+++ b/.ebextensions/db-migrate.config
@@ -1,10 +1,10 @@
 container_commands:
   01_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate && django-admin.py migrate"
+    command: "django-admin.py migrate"
     leader_only: true
 
   02_createsuperuser:
-    command: "source /var/app/venv/*/bin/activate && echo \"from accounts.models import Account; Account.objects.create_superuser('Raghav', 'Chugh', 'raghavchugh.code@gmail.com', 'raghavchugh.code', 'djangoproject')\" | python3 manage.py shell"
+    command: "echo \"from accounts.models import Account; Account.objects.create_superuser('Raghav', 'Chugh', 'raghavchugh.code@gmail.com', 'raghavchugh.code', 'djangoproject')\" | python3 manage.py shell"
     leader_only: true
 
 option_settings:
