--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,13 @@
-asgiref==3.3.1
-astroid==2.5
-attrs==21.2.0
-awsebcli==3.20.0
-bcrypt==3.2.0
-blessed==1.18.1
-botocore==1.20.104
-cached-property==1.5.2
-cement==2.8.2
+asgiref==3.2.10
 certifi==2021.5.30
-cffi==1.14.5
 chardet==4.0.0
-colorama==0.4.3
-cryptography==3.4.7
-Django==3.1.7
-docker==4.4.4
-docker-compose==1.25.5
-dockerpty==0.4.1
-docopt==0.6.2
-future==0.16.0
+Django==3.1
+gunicorn==20.1.0
 idna==2.10
-isort==5.7.0
-jmespath==0.10.0
-jsonschema==3.2.0
-lazy-object-proxy==1.5.2
-mccabe==0.6.1
-paramiko==2.7.2
-pathspec==0.5.9
-Pillow==8.1.2
-pycparser==2.20
-pylint==2.7.1
-pylint-django==2.4.2
-pylint-plugin-utils==0.6
-PyNaCl==1.4.0
-pyrsistent==0.18.0
-python-dateutil==2.8.1
+Pillow==8.2.0
+psycopg2==2.9.1
 python-decouple==3.4
 pytz==2021.1
-PyYAML==5.4.1
 requests==2.25.1
-semantic-version==2.8.5
-six==1.14.0
 sqlparse==0.4.1
-termcolor==1.1.0
-texttable==1.6.3
-toml==0.10.2
-urllib3==1.25.11
-wcwidth==0.1.9
-websocket-client==0.59.0
-wrapt==1.12.1
+urllib3==1.26.6
