--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==3.1
 gunicorn==20.1.0
 idna==2.10
 Pillow==8.2.0
-psycopg2==2.9.1
+psycopg2-binary==2.8.6
 python-decouple==3.4
 pytz==2021.1
 requests==2.25.1
